# accreditations-scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __main__.py  selectors.py
